[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Enemies/enemybottom2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/playerUpper.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Player/Animated.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player/Camera.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Player/InteractiveArea.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Player/LoudArea.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/HUDTheme.tres" type="Theme" id=8]
[ext_resource path="res://Assets/Base/light_smol.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Objects/Flicker.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Player/Pause.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Player/Inventory.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Objects/ItemWaffle.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Player/SayLine.gd" type="Script" id=14]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Animated/Body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animated/Body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -45.0, -38.2559, 45.0, 38.3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Animated/Body/LeftFoot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Animated/Body/RightFoot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("LoudArea")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "loud"
}, {
"args": [  ],
"method": "loud"
} ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 256.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 44, 20 )

[sub_resource type="CircleShape2D" id=1]
radius = 22.0

[sub_resource type="InputEventAction" id=8]
action = "ui_cancel"
pressed = true

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 24.0
content_margin_right = 24.0
content_margin_top = 24.0
content_margin_bottom = 24.0
bg_color = Color( 0.0392157, 0.0980392, 0.0980392, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 24.0
content_margin_right = 24.0
content_margin_top = 24.0
content_margin_bottom = 24.0
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_bottom_right = 4

[sub_resource type="InputEventKey" id=11]
pressed = true
physical_scancode = 69

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="CircleShape2D" id=7]
radius = 64.0

[sub_resource type="CircleShape2D" id=4]
radius = 256.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource( 3 )

[node name="PassiveLight" type="Light2D" parent="."]
texture = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Animated" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animated"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="Body" type="Sprite" parent="Animated"]
texture = ExtResource( 1 )

[node name="Head" type="Sprite" parent="Animated/Body"]
texture = ExtResource( 2 )
offset = Vector2( -4, 0 )

[node name="InteractiveArea" type="Area2D" parent="Animated/Body/Head"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animated/Body/Head/InteractiveArea"]
visible = false
shape = SubResource( 5 )

[node name="WallDetection" type="RayCast2D" parent="Animated/Body/Head/InteractiveArea"]
collision_mask = 16

[node name="Timer" type="Timer" parent="Animated/Body/Head/InteractiveArea"]
process_mode = 0
wait_time = 0.4
autostart = true

[node name="Interaction" type="Area2D" parent="Animated/Body/Head/InteractiveArea"]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animated/Body/Head/InteractiveArea/Interaction"]
position = Vector2( 34, 0 )
shape = SubResource( 6 )

[node name="LeftFoot" type="AudioStreamPlayer2D" parent="Animated/Body" groups=["FOOTSTEP"]]
position = Vector2( -3, -19 )
bus = "SFX"

[node name="RightFoot" type="AudioStreamPlayer2D" parent="Animated/Body" groups=["FOOTSTEP"]]
position = Vector2( -2, 19 )
bus = "SFX"

[node name="RightHand" type="Position2D" parent="Animated/Body"]
position = Vector2( 2, -18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 100

[node name="Theme" type="Control" parent="HUD"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InteractiveDisplay" type="Label" parent="HUD/Theme"]
visible = false
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -146.0
margin_top = -24.5
margin_right = 146.0
margin_bottom = 24.5
mouse_filter = 1
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="PopupPanel" parent="HUD/Theme"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -86.5
margin_right = 110.0
margin_bottom = 86.5
popup_exclusive = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Theme/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -70.5
margin_right = 94.0
margin_bottom = 70.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HUD/Theme/Pause/VBoxContainer"]
margin_right = 188.0
margin_bottom = 25.0
shortcut_in_tooltip = false
shortcut = SubResource( 9 )
text = "Resume"

[node name="Button2" type="Button" parent="HUD/Theme/Pause/VBoxContainer"]
margin_top = 58.0
margin_right = 188.0
margin_bottom = 83.0
text = "Save"

[node name="Button4" type="Button" parent="HUD/Theme/Pause/VBoxContainer"]
margin_top = 87.0
margin_right = 188.0
margin_bottom = 112.0
text = "Load"

[node name="Button3" type="Button" parent="HUD/Theme/Pause/VBoxContainer"]
margin_top = 116.0
margin_right = 188.0
margin_bottom = 141.0
text = "Quit"

[node name="Inventory" type="PopupPanel" parent="HUD/Theme"]
anchor_left = 0.09
anchor_top = 0.137
anchor_right = 0.91
anchor_bottom = 0.862
margin_left = -0.100002
margin_top = 0.179996
margin_right = 0.0999756
margin_bottom = 0.179993
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="HUD/Theme/Inventory"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
margin_left = -36.49
margin_top = -10.1
margin_right = 36.49
margin_bottom = 10.1
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="HUD/Theme/Inventory/VSplitContainer"]
margin_right = 1017.8
margin_bottom = 453.0
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 1

[node name="ItemWaffle" type="ReferenceRect" parent="HUD/Theme/Inventory/VSplitContainer/HSplitContainer"]
margin_right = 502.0
margin_bottom = 453.0
size_flags_horizontal = 3
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": true
}
size = Vector2( 5, 5 )

[node name="ItemDesc" type="TextEdit" parent="HUD/Theme/Inventory/VSplitContainer/HSplitContainer"]
margin_left = 514.0
margin_right = 1017.8
margin_bottom = 453.0
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
readonly = true
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="HUD/Theme/Inventory/VSplitContainer"]
margin_top = 465.0
margin_right = 1017.8
margin_bottom = 490.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Equip" type="Button" parent="HUD/Theme/Inventory/VSplitContainer/Buttons"]
margin_right = 58.0
margin_bottom = 25.0
shortcut = SubResource( 12 )
text = "Equip"

[node name="Drop" type="Button" parent="HUD/Theme/Inventory/VSplitContainer/Buttons"]
margin_left = 90.0
margin_right = 138.0
margin_bottom = 25.0
text = "Drop"

[node name="Keycards" type="Button" parent="HUD/Theme/Inventory/VSplitContainer/Buttons"]
margin_left = 170.0
margin_right = 258.0
margin_bottom = 25.0
text = "Keycards"

[node name="Notes" type="Button" parent="HUD/Theme/Inventory/VSplitContainer/Buttons"]
margin_left = 290.0
margin_right = 348.0
margin_bottom = 25.0
text = "Notes"

[node name="Selected" type="ReferenceRect" parent="HUD/Theme/Inventory"]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 1033.8
margin_bottom = 506.0
mouse_filter = 2
border_color = Color( 1, 1, 1, 1 )
border_width = 2.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipped" type="ReferenceRect" parent="HUD/Theme/Inventory"]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 1033.8
margin_bottom = 506.0
mouse_filter = 2
border_color = Color( 1, 0.913725, 0, 1 )
border_width = 2.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SayLine" type="VBoxContainer" parent="HUD/Theme"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.3
margin_right = 0.159973
margin_bottom = 0.0399933
mouse_filter = 2
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HUD/Theme/SayLine"]

[node name="Primary" type="Label" parent="HUD/Theme"]
visible = false
anchor_left = 0.05
anchor_top = 0.8
anchor_right = 0.05
anchor_bottom = 0.8
mouse_filter = 1
text = "Primary action"

[node name="Secondary" type="Label" parent="HUD/Theme"]
visible = false
anchor_left = 0.95
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 0.8
grow_horizontal = 0
mouse_filter = 1
text = "Secondary action"
align = 2

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
script = ExtResource( 5 )

[node name="LoudArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource( 7 )

[node name="WalkArea" type="CollisionShape2D" parent="LoudArea"]
shape = SubResource( 7 )

[node name="SprintArea" type="CollisionShape2D" parent="LoudArea"]
shape = SubResource( 4 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[connection signal="area_entered" from="Animated/Body/Head/InteractiveArea" to="Animated/Body/Head/InteractiveArea" method="inter_entered"]
[connection signal="area_exited" from="Animated/Body/Head/InteractiveArea" to="Animated/Body/Head/InteractiveArea" method="inter_left"]
[connection signal="timeout" from="Animated/Body/Head/InteractiveArea/Timer" to="Animated/Body/Head/InteractiveArea" method="recheck"]
[connection signal="about_to_show" from="HUD/Theme/Pause" to="HUD/Theme/Pause" method="_on_Pause_about_to_show"]
[connection signal="popup_hide" from="HUD/Theme/Pause" to="HUD/Theme/Pause" method="_on_Pause_popup_hide"]
[connection signal="pressed" from="HUD/Theme/Pause/VBoxContainer/Button" to="HUD/Theme/Pause" method="hide"]
[connection signal="pressed" from="HUD/Theme/Pause/VBoxContainer/Button3" to="HUD/Theme/Pause" method="_on_quit_pressed"]
[connection signal="about_to_show" from="HUD/Theme/Inventory" to="." method="follow_mouse" binds= [ false ]]
[connection signal="about_to_show" from="HUD/Theme/Inventory" to="HUD/Theme/Inventory" method="override_selected"]
[connection signal="about_to_show" from="HUD/Theme/Inventory" to="HUD/Theme/Inventory" method="update_equipped"]
[connection signal="popup_hide" from="HUD/Theme/Inventory" to="." method="follow_mouse" binds= [ true ]]
[connection signal="gui_input" from="HUD/Theme/Inventory/VSplitContainer/HSplitContainer/ItemWaffle" to="HUD/Theme/Inventory" method="_on_ItemWaffle_gui_input"]
[connection signal="items_changed" from="HUD/Theme/Inventory/VSplitContainer/HSplitContainer/ItemWaffle" to="HUD/Theme/Inventory" method="select"]
[connection signal="pressed" from="HUD/Theme/Inventory/VSplitContainer/Buttons/Equip" to="HUD/Theme/Inventory" method="_on_Equip_pressed"]
[connection signal="pressed" from="HUD/Theme/Inventory/VSplitContainer/Buttons/Drop" to="HUD/Theme/Inventory" method="_on_Drop_pressed"]
[connection signal="pressed" from="HUD/Theme/Inventory/VSplitContainer/Buttons/Keycards" to="HUD/Theme/Inventory" method="_on_Keycards_pressed"]
[connection signal="pressed" from="HUD/Theme/Inventory/VSplitContainer/Buttons/Notes" to="HUD/Theme/Inventory" method="_on_Notes_pressed"]
